# proyecto-ia-rag-rl

./: .env  .gitignore  4_points_evaluation_final.json  4_points_evaluation_real.json  README.md  README_DEMOSTRACION.md  add_queries.py  arranque_rapido.py  build_bm25_index.py  build_esci_corpus.py  build_esci_ground_truth_v2.py  check_real_products.py  conclusiones_personalizacion.txt  config_optimized.py  create_gt_by_search.py  create_realistic_ground_truth.py  create_test_data.py  debug_metrics.py  debug_ranking_comparison.py  debug_retrain.py  debug_rlhf.py  deepeval.py  deepeval_advanced.py  deepeval_custom.py  deepeval_diagnostic.py  deepeval_fixed.py  deepevalpos.py  demo_hybrid_system.py  diagnose_retrieval.py  diagnostic.py  diagnosticar_datos.py  download_local_models.py  ejecutar_demostracion_completa.py  entrega de propuesta.md  entrenamiento.py  entrenar_true_rlhf.py  evaluador_avanzado_rlhf.py  evaluador_final_corregido.py  evaluador_preferencias_rlhf.py  evaluador_tres_metodos.py  (+113 more)
config/: categories.yaml  config.yaml  default_settings.json  experiment.yaml  experiments.yaml  paper_experiment.yaml  rlhf_config.yaml  settings.py
data/: amazon_products.json
demo/: __init__.py  generator.py  pipeline.py  rag_agent_v2.py
docs/: defense_answers.md
logs/: verification_report_20260111_161056.txt
models/: rag_agent.py
path_to_your_index/: chroma.sqlite3
proyecto_ia.egg-info/: PKG-INFO  SOURCES.txt
rag/: retrieval.py
results/: 20251219_103659_data_stats.json  demo_results.json  evaluation_20260227_200035.csv  evaluation_20260227_200035.json  evaluation_20260227_200035.txt  evaluation_20260227_202052.csv  evaluation_20260227_202052.json  evaluation_20260227_202052.txt  evaluation_20260227_202213.csv  evaluation_20260227_202213.json  evaluation_20260227_202213.txt  evaluation_20260227_211307.csv  evaluation_20260227_211307.json  evaluation_20260227_211307.txt  evaluation_20260227_211856.csv  evaluation_20260227_211856.json  evaluation_20260227_211856.txt  evaluation_20260227_220501.csv  evaluation_20260227_220501.json  evaluation_20260227_220501.txt  evaluation_20260227_220822.csv  evaluation_20260227_220822.json  evaluation_20260227_220822.txt  evaluation_20260227_221135.csv  (+180 more)
scripts/: check_ollama.py  (+14 more)
(+397 files in other folders)
