[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "amazon-rag-rlhf"
version = "0.2.0"
description = "Category-aware RAG + RLHF fine-tuning for Amazon product recommendations"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Your Name", email = "you@example.com"},
]
keywords = ["rag", "rlhf", "amazon", "recommendation", "nlp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "langchain>=0.2.11",
    "langchain-community>=0.2.10",
    "langchain-huggingface>=0.0.3",
    "langchain-google-genai>=1.0.7",
    "langchain-chroma>=0.1.2",
    "sentence-transformers>=3.0.1",
    "transformers>=4.43.2",
    "tokenizers>=0.19.1",
    "faiss-cpu>=1.8.0; sys_platform != 'linux'",
    "faiss-gpu>=1.8.0; sys_platform == 'linux'",
    "chromadb>=0.5.3",
    "torch>=2.3.1",
    "accelerate>=0.31.0",
    "peft>=0.11.1",
    "trl>=0.9.6",
    "datasets>=2.20.0",
    "sentencepiece>=0.1.99",
    "PyYAML>=6.0.1",
    "python-dotenv>=1.0.1",
    "tqdm>=4.66.4",
    "click>=8.1.7",
    "google-generativeai>=0.7.2",
    "langdetect>=1.0.9",
    "pydantic>=2.0.0",
    "langchain-core>=0.3.0"
]

[project.optional-dependencies]
gpu = ["torch[cuda]"]
dev = [
    "pytest>=8.3.1",
    "black>=24.4.2",
    "isort>=5.13.2",
    "ruff>=0.5.2",
]

[project.urls]
Homepage = "https://github.com/your-org/amazon-rag-rlhf"
Issues = "https://github.com/your-org/amazon-rag-rlhf/issues"

[project.scripts]
amazon-rag = "src.interfaces.cli:main"
amazon-pipeline = "demo.pipeline:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "demo*"]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
select = ["E", "F", "W", "C90", "I", "N", "UP", "B", "A", "S", "BLE"]
line-length = 88